# parallel-algo-lab

./: .gitignore  CMakeLists.txt  README.md  parallel_algo_lab.sln
basic_vs_tiled_matrix_mul/: CMakeLists.txt
basic_vs_tiled_matrix_mul/src/: main.cu
common/: helpers.h
common/stbi_image/: stbi_image_write.h
convolution/: CMakeLists.txt
convolution/src/: CPUConvolution.cpp  Convolution.h  GPUConvolution.cu  main.cpp
histogram/: CMakeLists.txt
histogram/src/: main.cu
image_blur/: CMakeLists.txt
image_blur/src/: main.cu
parallel_scan/: CMakeLists.txt
parallel_scan/src/: main.cu
sparse_matrix_compute/: CMakeLists.txt  csr_generator.py
sparse_matrix_compute/data/: csr_matrix_data.txt  csr_matrix_indices.txt  csr_matrix_indptr.txt
sparse_matrix_compute/src/: main.cu
vector_add/: CMakeLists.txt
vector_add/src/: kernel.cu  main.cu
vector_add_with_streams/src/: main.cu
